﻿﻿[B]Changelog[/B]
* Fixed: UR Play broke (Fixes #1286)
* Fixed: SVT Live channels (Fixes #1289)
* Fixed: Missing subtitles for some videos on SVT (Fixes #1283)
* Fixed: missing video item type 'Variant' caused missing episodes (Fixes #1284)

[I]Previous changes[/I]
* Updated: thumbs/fanart for DPlay (Fixes #1277)
* Fixed: Kanal 5 and DPlay did not work (Fixes #1275)
* Fixed: TV4 Play thumbs and fanart (Fixes #1280)
* Updated: thumbs/fanart for SVT, TV4 and DPlay (See #1268)
* Added: Add season/episode info instead of "del #" to TV4 (See #1271)
* Added: Expire date to TV4 items (See #1271 and Fixes #1269)
* Added: Duration to TV4 shows (See #1271)
* Fixed: &amp; in SVT subtitles
* Added: Missing fanart and thumbs to SVT (Fixes #1273)
* Fixed: `Filmer` category and missing ones in SVT (Fixes #1273)
* Added: Date to some videos (See #1273)
* Changed: Filter titles for some videos to not include a date or time (See #1273)
* Added: Some season information to shows that have it in SVT (See #1273)
* Fixed: We removed too much episode information in ee9358b0 (See #1271)* Fixed: SVT "trailer" type was not recognised
* Fixed: Timestamp issue with SVT
* Fixed: SVT major API rebuild (Fixes #1254)
* Fixed: some TV4play.se streams are now DRM protected with Widevine (Fixes #1250)
* Added: Expires at to SVT (Fixes #1213)
* Fixed: TV4.se changed their API endpoint (Fixes #1240)
* Changed: Try to extract a duration from the description (Fixes #1238)
* Fixed: UR Play site changes broke the channel (Fixes #1237)
* Fixed: Kanal 9 and Kanal 11 fanart
* Fixed: UR Play updated their site and broke Retrospect (Fixes #1226)
* Fixed: listing of SVT shows did not work (Fixes #1217)
* Fixed: invalid expire dates for OA items in SVT Play and set Geo protected warning (Fixes #1220)
* Fixed: Swedish TV4, Sjuan and TV12 did not show subtitles (Fixes #1188)
* Changed: restructured the TV4 Play main list a bit (Fixes #1193)
* Added: Duration and Expire Date to SVT