@@ -67,17 +67,6 @@
       "fanart": "tvnorgefanart.jpg"
     },
     {
-      "guid": "214E3395-E467-4B1F-87E9-C19FABB5C983",
-      "name": "TLC (Norge)",
-      "description": "Sendinger fra TLC (Dplay.no).",
-      "icon": "tlcnorgelarge.png",
-      "category": "National",
-      "channelcode": "tlcnorge",
-      "sortorder": 7,
-      "language": "no",
-      "fanart": "dplayfanart.jpg"
-    },
-    {
       "guid": "AA14585A-F519-42FF-824B-7ABAC76F18FD",
       "name": "Max (Norge)",
       "description": "Sendinger fra Max (Dplay.no).",
@@ -111,28 +100,6 @@
       "fanart": "dplayfanart.jpg"
     },
     {
-      "guid": "CF4BA707-70F6-435A-AA90-498BBA51E8CE",
-      "name": "Animal Planet (Norge)",
-      "description": "Sendinger fra Animal Planet (Dplay.no).",
-      "icon": "animalplanetnorgelarge.png",
-      "category": "National",
-      "channelcode": "animalplanetnorge",
-      "sortorder": 7,
-      "language": "no",
-      "fanart": "dplayfanart.jpg"
-    },
-    {
-      "guid": "51289704-362F-42A0-9AA9-8F69F36925A3",
-      "name": "Discovery Channel (Norge)",
-      "description": "Sendinger fra Discovery Channel (Dplay.no).",
-      "icon": "discoverynorgelarge.png",
-      "category": "National",
-      "channelcode": "discoverynorge",
-      "sortorder": 7,
-      "language": "no",
-      "fanart": "dplayfanart.jpg"
-    },
-    {
       "guid": "A4F6C1DA-A485-4504-B6C2-840E5548E87D",
       "name": "Discovery Science (Norge)",
       "description": "Sendinger fra Discovery Science (Dplay.no).",
@@ -155,17 +122,6 @@
       "language": "no",
       "fanart": "dplayfanart.jpg",
       "compatible": "Environments.NoPlatform"
-    },
-    {
-      "guid": "FA962043-49C4-45C7-9EB5-B82C70EB0974",
-      "name": "Investigation Discovery (Norge)",
-      "description": "Sendinger fra Investigation Discovery (Dplay.no).",
-      "icon": "investigationdiscoverynorgelarge.png",
-      "category": "National",
-      "channelcode": "investigationdiscoverynorge",
-      "sortorder": 7,
-      "language": "no",
-      "fanart": "dplayfanart.jpg"
     },
     {
       "guid": "5141DFDF-3B9D-4368-8943-2F8D500BC2D1",
